--- a/scss/modules/_subpage.scss
+++ b/scss/modules/_subpage.scss
@@ -22,6 +22,13 @@
     text-align: left;
 }
 
+.subpage__content--coding-snippets pre code {
+    
+    // Add space between the end of code lines and the `pre` block
+    display: inline-block;
+    margin-right: 1.5rem;
+}
+
 .subpage__image-container {
 
     width: 50vw;
